<resources>
    <string name="app_name">Note Online</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="retype_your_password">Retype your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered">Already Registered !!</string>
    <string name="sign_up">sign_Up</string>
    <string name="not_registered_yet">not_registered yet?</string>
    <string name="type_your_task">you can write here :)</string>
</resources>